Adds sticky header row (site selection, date, filters) (#472)
* Adds New Dark Mode Assets

* Moves triangle for dropdown to a reasonable position

* Majority .eex dark implementation

* Fixes Logo Positioning

* Adds theme flag to user schema, uses it

* Uses correct variables for theme applicator script

* Minor missed theme changes/fallbacks

* Individual Component Support + Theme Context

* Sources Tab Support

This was a pain to test D:

* Partial Stats Sections Support

* More of stats modules supported

* Modal +table support

* Improves some Flatpickr in light theme, supports dark theme

* Fixes missed settings tab colors

* Finishes Devices module support

* Fixes bar graph colors

* Better colorizes maps module

* Undoes colorized bars

(they looked bad, on second thought)

* Fixes loading indicator

* Finishes conversions module

* Adds changelog entry

The PR number could be wrong, will double check

* Fixes missed header color

* Fixes naming of migration and removes static alter

* Does migration correctly

As I said, my Elixir is pretty weak heh

* Adds support for spike notifications setting

* Improves contrast and visibility for email settings

* Add initial implementation for sticky header

* Minor mobile formatting improvements

* Finishes (probably) pinned header feature

* Adds changelog entry for pinned header

* Updates PR number in sticky header changelog entry

* Wraps up code cleanup + feature

* Merge conflicts are hard, apparently

* Removes extraneous tailwind variants

* Fixes mentioned issues

* Removes option to unsticky
* py-3
* Tailwind in CSS

--- a/assets/css/app.css
+++ b/assets/css/app.css
@@ -29,7 +29,8 @@ html {
 
 body {
 	-webkit-font-smoothing: antialiased;
-	-moz-osx-font-smoothing: grayscale;
+  -moz-osx-font-smoothing: grayscale;
+  overflow-x: hidden;
 }
 
 blockquote {
@@ -265,4 +266,16 @@ blockquote {
 /* Only because the map handler doesn't expose an easier way to change the shadow color */
 .dark .hoverinfo {
   box-shadow: 1px 1px 5px rgb(26, 32, 44);
+}
+
+.fullwidth-shadow::before {
+  @apply h-full absolute top-0 bg-gray-50 w-screen dark:bg-gray-850;
+  box-shadow: 0 4px 2px -2px rgba(0, 0, 0, 0.06);
+  content: "";
+  z-index: -1;
+  left: calc(-1 * calc(50vw - 50%));
+}
+
+.dark .fullwidth-shadow::before {
+  box-shadow: 0 4px 2px -2px rgba(200, 200, 200, 0.1);
 }
