Add ability to resend activation codes

--- a/lib/plausible_web/templates/auth/activate.html.eex
+++ b/lib/plausible_web/templates/auth/activate.html.eex
@@ -18,9 +18,11 @@
       <div class="mt-16 text-sm dark:text-gray-100">
         Didn't receive an email?
       </div>
-      <div class="mt-2 text-sm text-gray-500 leading-tight">
-        Please check your spam folder and contact <a class="underline text-indigo-500" href="mailto:support@plausible.io">support@plausible.io</a> if the problem persists
-      </div>
+      <ol class="list-decimal text-xs text-gray-500 leading-tight space-y-1 mt-1">
+        <li>Check your spam folder</li>
+        <li><%= link("Send a new code", class: "underline text-indigo-600", to: "/activate/request-code", method: :post) %> to <%= @conn.assigns[:current_user].email %></li>
+        <li>Contact <a class="underline text-indigo-600" href="mailto:support@plausible.io">support@plausible.io</a> if the problem persists</li>
+      </ol>
     <% end %>
   <% else %>
     <div class="w-full max-w-lg mx-auto bg-white dark:bg-gray-800 shadow-md rounded px-8 py-6 mb-4 mt-8">
