In app release notes (#554)
* Remove warning

* Add in-app release notes

* Update changelog url

--- a/lib/plausible_web/templates/layout/app.html.eex
+++ b/lib/plausible_web/templates/layout/app.html.eex
@@ -50,6 +50,9 @@
                       </div>
                     </div>
                   </li>
+                  <%= if @conn.assigns[:current_user].email in ["me@markosaric.com", "uku@plausible.io"] do  %>
+                    <li id="changelog-notification" class="relative py-2"></li>
+                  <% end %>
                 </ul>
                 <%  Keyword.fetch!(Application.get_env(:plausible, :selfhost), :disable_authentication) -> %>
                   <ul class="flex" x-show="!document.cookie.includes('logged_in=true')">
