--- a/lib/plausible_web/templates/auth/register_form.html.eex
+++ b/lib/plausible_web/templates/auth/register_form.html.eex
@@ -3,7 +3,7 @@
   <div class="text-xl font-medium">Set up privacy-friendly analytics with just a few clicks</div>
 </div>
 
-<div class="w-full max-w-3xl mt-4 mx-auto flex">
+<div class="w-full max-w-3xl mt-4 mx-auto flex flex-shrink-0">
   <%= form_for @changeset, "/register", [class: "w-full max-w-md mx-auto bg-white dark:bg-gray-800 shadow-md rounded px-8 py-6 mb-4 mt-8", id: "register-form"], fn f -> %>
     <h2 class="text-xl font-black dark:text-gray-100">Enter your details</h2>
     <div class="my-4">
