--- a/lib/plausible_web/templates/layout/site_settings.html.eex
+++ b/lib/plausible_web/templates/layout/site_settings.html.eex
@@ -19,7 +19,7 @@
       </div>
 
       <div class="space-y-6 lg:col-span-9 lg:mt-4">
-        <%= render @view_module, @view_template, assigns %>
+        <%= @inner_content %>
       </div>
     </div>
   </div>
