--- a/assets/css/app.css
+++ b/assets/css/app.css
@@ -283,3 +283,7 @@ blockquote {
 .dark .fullwidth-shadow::before {
   box-shadow: 0 4px 2px -2px rgba(200, 200, 200, 0.1);
 }
+
+iframe[hidden] {
+  display: none;
+}
