--- a/lib/plausible_web/templates/site/new.html.eex
+++ b/lib/plausible_web/templates/site/new.html.eex
@@ -3,6 +3,7 @@
     <h2 class="text-xl font-black dark:text-gray-100">Your website details</h2>
     <div class="my-6">
       <%= label f, :domain, class: "block text-sm font-medium text-gray-700 dark:text-gray-300" %>
+      <p class="text-gray-500 dark:text-gray-400 text-xs mt-1">Just the naked domain without 'www'</p>
       <div class="mt-2 flex rounded-md shadow-sm">
         <span class="inline-flex items-center px-3 rounded-l-md border border-r-0 border-gray-300 dark:border-gray-500 bg-gray-50 dark:bg-gray-850 text-gray-500 dark:text-gray-400 sm:text-sm">
           https://
