--- a/lib/plausible_web/templates/layout/app.html.eex
+++ b/lib/plausible_web/templates/layout/app.html.eex
@@ -58,7 +58,7 @@
                       </div>
                     </div>
                   </li>
-                  <%= if @conn.assigns[:current_user] do  %>
+                  <%= if @conn.assigns[:current_user] && !Application.get_env(:plausible, :is_selfhost) do  %>
                     <li id="changelog-notification" class="relative py-2"></li>
                   <% end %>
                 </ul>
