Make API key management look good on dark mode

--- a/lib/plausible_web/templates/auth/user_settings.html.eex
+++ b/lib/plausible_web/templates/auth/user_settings.html.eex
@@ -168,19 +168,18 @@
 
   <div class="my-4 border-b border-gray-300 dark:border-gray-500"></div>
 
-  <div class="p-4 rounded-md bg-yellow-50">
+  <div class="p-4 bg-gray-800 rounded-md bg-yellow-50 dark:bg-gray-900">
     <div class="flex">
       <div class="flex-shrink-0">
-        <!-- Heroicon name: solid/exclamation -->
         <svg class="w-5 h-5 text-yellow-400" xmlns="http://www.w3.org/2000/svg" viewBox="0 0 20 20" fill="currentColor" aria-hidden="true">
           <path fill-rule="evenodd" d="M8.257 3.099c.765-1.36 2.722-1.36 3.486 0l5.58 9.92c.75 1.334-.213 2.98-1.742 2.98H4.42c-1.53 0-2.493-1.646-1.743-2.98l5.58-9.92zM11 13a1 1 0 11-2 0 1 1 0 012 0zm-1-8a1 1 0 00-1 1v3a1 1 0 002 0V6a1 1 0 00-1-1z" clip-rule="evenodd" />
         </svg>
       </div>
       <div class="ml-3">
-        <h3 class="text-sm font-medium text-yellow-800">
+        <h3 class="text-sm font-medium text-yellow-800 dark:text-yellow-500">
           Beta feature
         </h3>
-        <div class="mt-2 text-sm text-yellow-700">
+        <div class="mt-2 text-sm text-yellow-700 dark:text-yellow-400">
           <p>
           The stats API is in public beta mode. Feel free to issue API keys and test your integrations.
           However, we reserve the right to make breaking changes to the API until we exit the beta and release
@@ -191,33 +190,33 @@
     </div>
   </div>
 
-  <div class="flex flex-col">
+  <div class="flex flex-col mt-6">
     <div class="-my-2 overflow-x-auto sm:-mx-6 lg:-mx-8">
       <div class="inline-block min-w-full py-2 align-middle sm:px-6 lg:px-8">
 
         <%= if Enum.any?(@user.api_keys) do %>
-          <div class="overflow-hidden border-b border-gray-200 shadow sm:rounded-lg">
-            <table class="min-w-full divide-y divide-gray-200">
-              <thead class="bg-gray-50">
+          <div class="overflow-hidden border-b border-gray-200 shadow dark:border-gray-900 sm:rounded-lg">
+            <table class="min-w-full divide-y divide-gray-200 dark:divide-gray-900">
+              <thead class="bg-gray-50 dark:bg-gray-900">
                 <tr>
-                  <th scope="col" class="px-6 py-3 text-xs font-medium tracking-wider text-left text-gray-500 uppercase">
+                  <th scope="col" class="px-6 py-3 text-xs font-medium tracking-wider text-left text-gray-500 uppercase dark:text-gray-100">
                     Name
                   </th>
-                  <th scope="col" class="px-6 py-3 text-xs font-medium tracking-wider text-left text-gray-500 uppercase">
+                  <th scope="col" class="px-6 py-3 text-xs font-medium tracking-wider text-left text-gray-500 uppercase dark:text-gray-100">
                     Key
                   </th>
                   <th scope="col" class="relative px-6 py-3">
-                    <span class="sr-only">Remove</span>
+                    <span class="sr-only">Revoke</span>
                   </th>
                 </tr>
               </thead>
               <tbody>
                 <%= for api_key <- @user.api_keys do  %>
-                  <tr class="bg-white">
-                    <td class="px-6 py-4 text-sm font-medium text-gray-900 whitespace-nowrap">
+                  <tr class="bg-white dark:bg-gray-800">
+                    <td class="px-6 py-4 text-sm font-medium text-gray-900 dark:text-gray-100 whitespace-nowrap">
                       <%= api_key.name %>
                     </td>
-                    <td class="px-6 py-4 text-sm text-gray-500 whitespace-nowrap">
+                    <td class="px-6 py-4 text-sm text-gray-500 dark:text-gray-100 whitespace-nowrap">
                       <%= api_key.key_prefix %><%= String.duplicate("*", 32 - 6) %>
                     </td>
                     <td class="px-6 py-4 text-sm font-medium text-right whitespace-nowrap">
