--- a/lib/plausible_web/templates/layout/focus.html.eex
+++ b/lib/plausible_web/templates/layout/focus.html.eex
@@ -23,7 +23,7 @@
     <%= @inner_content %>
 
     <p class="text-center text-gray-500 text-xs py-8">
-      ©2020 Plausible Analytics. All rights reserved.
+      ©<%= DateTime.utc_now().year() %> Plausible Analytics. All rights reserved.
     </p>
 
     <script type="text/javascript" src="<%= Routes.static_path(@conn, "/js/app.js") %>"></script>
